# Production_Grade_FastAPI_Template

./: .gitignore  alembic.ini  main.py  pyproject.toml
configs/: config.py  db.py
controller/: ping_controller.py  post_controller.py
database/: db.py
database/modals/: __init__.py  base.py  post_modal.py
dependencies/: dependency.py
dto/: post_dto.py
middlewares/: add_corelation_id_middleware.py  add_process_time_middleware.py
migration/: env.py
migration/versions/: 6cc307f2e976_initial_tables.py
repository/: post_repository.py
router/: v1_router.py
router/v1/: ping_router.py  post_router.py
schema/: post_schema.py
service/: post_service.py
templates/: index.html  layout.html
utils/: context.py  exception.py  generate_corelation_id.py  logger.py
