[project]
name = "fastapi_learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiomysql>=0.3.2",
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.128.7",
    "pydantic-settings>=2.12.0",
    "pymysql>=1.1.2",
    "python-json-logger>=4.0.0",
    "sqlalchemy>=2.0.46",
]
